Add `resultBundlePath` to xcodebuild command

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
+  "appName": "AppName", // TODO: Replace with app name
+  "bundleID": "com.example.AppName", // TODO: Replace with the app's bundle identifier
   "lldb.library": "/Applications/Xcode.app/Contents/SharedFrameworks/LLDB.framework/Versions/A/LLDB",
   "[swift]": {
     "editor.defaultFormatter": "swiftlang.swift-vscode"
-  },
-  "appName": "AppName", // TODO: Replace with app name
-  "bundleID": "com.example.AppName" // TODO: Replace with the app's bundle identifier
+  }
 }
