Add silent reveal option to Build task presentation

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,7 @@
         "echo": false,
         "showReuseMessage": false,
         "panel": "dedicated",
+        "reveal": "silent",
         "close": true
       }
     },
