Update tasks.json to include revealProblems option
Added 'revealProblems' setting to presentation.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,8 @@
       "presentation": {
         "panel": "dedicated",
         "echo": false,
-        "showReuseMessage": false
+        "showReuseMessage": false,
+        "revealProblems": "onProblem"
       }
     },
     {
