Remove 'revealProblems' from tasks.json

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,8 +10,7 @@
       "presentation": {
         "panel": "dedicated",
         "echo": false,
-        "showReuseMessage": false,
-        "revealProblems": "onProblem"
+        "showReuseMessage": false
       }
     },
     {
