Reveal problems panel on build failure

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -43,9 +43,10 @@
       ],
       "group": { "kind": "build", "isDefault": true },
       "presentation": {
-        "panel": "dedicated",
         "echo": false,
-        "showReuseMessage": false
+        "showReuseMessage": false,
+        "panel": "dedicated",
+        "revealProblems": "onProblem"
       }
     },
     {
