Set Build task to silent reveal

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -46,6 +46,7 @@
         "echo": false,
         "showReuseMessage": false,
         "panel": "dedicated",
+        "reveal": "silent",
         "revealProblems": "onProblem"
       }
     },
